# animal

./: README.md  docker-compose.yml  pyproject.toml  setup.cfg
docker/: Dockerfile
src/: classes.csv  main_app.py
