[tool.poetry]
name = "animalmegadetector"
version = "0.1.0"
description = ""
authors = ["Rastorguev763 <alex.rastorguev@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
megadetector = "^5.0.21"
streamlit = "^1.41.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
